<resources>
    <string name="app_name">记记</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_activity_edit">ActivityEdit</string>
    <string name="title_activity_settings">Settings</string>

    <!-- 登录界面 -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名无效</string>
    <string name="error_invalid_password">密码无效</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">此项必填</string>
    <string name="action_register"><u><i>还没有账号？去注册</i></u></string>

    <!--注册界面-->
    <string name="get_verify">获取验证码</string>
    <string name="phonenumber">手机号</string>
    <string name="password">输入密码</string>
    <string name="repeat_password">再次输入密码</string>
    <string name="input_verify">请输入验证码</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
</resources>
